# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-check.yml  lint.yml  pyci.yml
gendiff/: __init__.py  cli.py  gendiff.py  tree.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: nested_file2.yaml
