[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["denkitaev"]
packages = [
  { include = "gendiff" },
]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console"
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
